minor changes about paths

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <form ref='uploadForm' id='uploadForm' action='/students/save' method='post' encType="multipart/form-data">
+  <form ref='uploadForm' id='uploadForm' action='/student/save' method='post' encType="multipart/form-data">
     <input type="file" name="file" id="imgInp" />
     <input type='submit' value='Upload!' />
     <img id="image-preview" src="#">
